Added external css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Nicholas Richards eProfile</title>
+    <link href="css/style.css" rel"stylesheet">
   </head>
   <body style="background-color: darkgrey;">
     <h1 style="background-color: darkblue;">Nicholas Richards</h1>
