--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 style="background-color: darkblue;">Nicholas Richards</h1>
     <h5>ePortfolio</h5>
     <p style="font-size: 12px; color:blue;">#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
-    <h4><a href="personal_information.html">Personal Information</a></h4>
-    <h4><a href="interest_in_IT.html">Interest in IT</a></h4>
+    <h4><a href="itt_a1/personal_information.html">Personal Information</a></h4>
+    <h4><a href="itt_a1/interest_in_IT.html">Interest in IT</a></h4>
   </body>
 </html>
