--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h5>ePortfolio</h5>
     <p style="font-size: 12px; color:blue;">#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
     <h4><a href="personal_information.html">Personal Information</a></h4>
-    <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+    <h4><a href="itt_a1/interest_in_it.html">Interest in IT</a></h4>
   </body>
 </html>
