--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Nicholas Richards eProfile</title>
     <link href="css/style.css" rel"stylesheet">
   </head>
-  <body style="background-color: darkgrey;">
-    <h1 style="background-color: darkblue;">Nicholas Richards</h1>
+  <body>
+    <h1>Nicholas Richards</h1>
     <h5>ePortfolio</h5>
-    <p style="font-size: 12px; color:blue;">#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
+    <p>#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
     <h4><a href="personal_information.html">Personal Information</a></h4>
     <h4><a href="interest_in_it.html">Interest in IT</a></h4>
   </body>
