lots more content and images

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
     <h4><a href="personal_information.html">Personal Information</a></h4>
     <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+    <h4><a href="ideal_job.html">Interest in IT</a></h4>
+    <h4><a href="personal_profile.html">Interest in IT</a></h4>
+    <h4><a href="project_idea">Interest in IT</a></h4>
   </body>
 </html>
