--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Personal Information</title>
+    <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
     <h3>Interest in IT</h3>
