--- a/references.html
+++ b/references.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>references</title>
+    <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
     <h3>References</h3>
