--- a/personal_information.html
+++ b/personal_information.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Personal Information</title>
+    <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
     <h3>Personal Information</h3>
