--- a/personal_profile.html
+++ b/personal_profile.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>personal profile</title>
+    <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
     <img src="personality_head.png" alt="my personality logo">
