Lots of minor changes

--- a/personal_profile.html
+++ b/personal_profile.html
@@ -5,8 +5,9 @@
     <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
-    <img src="personality_head.png" alt="my personality logo">
-    <img src="personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
-    <img src="personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
+    <img src="images/personality_head.png" alt="my personality logo">
+    <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
+    <img src="images/personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
+    <p>Return to <a href="index.html">homepage</a></p>
   </body>
 </html>
