--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <p>#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
     <h4><a href="personal_information.html">Personal Information</a></h4>
     <h4><a href="interest_in_it.html">Interest in IT</a></h4>
-    <h4><a href="ideal_job.html">Interest in IT</a></h4>
-    <h4><a href="personal_profile.html">Interest in IT</a></h4>
-    <h4><a href="project_idea">Interest in IT</a></h4>
+    <h4><a href="ideal_job.html">Ideal Job</a></h4>
+    <h4><a href="personal_profile.html">Personal Profile</a></h4>
+    <h4><a href="project_idea">Project Idea</a></h4>
+    <h4><a href="references.html">References</a></h4>
   </body>
 </html>
