still trying to get css to work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nicholas Richards eProfile</title>
-    <link href="css/style.css" rel"stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h1>Nicholas Richards</h1>
