--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personal Information</title>
-    <link href="css/style.css" rel"stylesheet">
+    <title>interest in it</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h3>Interest in IT</h3>
