--- a/personal_information.html
+++ b/personal_information.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personal Information</title>
-    <link href="css/style.css" rel"stylesheet">
+    <title>personal information</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h3>Personal Information</h3>
