--- a/ideal_job.html
+++ b/ideal_job.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ideal job</title>
-    <link href="css/style.css" rel"stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h3>Ideal Job</h3>
