--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -9,10 +9,10 @@
     <p>My interest in IT started with the first computer my father brought home in the 1990s. Firstly, it was the biggest cardboard box I had ever seen, and immediately became the most awesome robot costume. But long after the cardboard box had gone I would look over my brother's shoulder as he played classic games like Where In the World is Carmen Sandiego? and Indiana Jones and the Last Crusade. A scene from Indy in the catacombs of Venice gave me nightmares for years!</p>
     <img src="images/indiana_jones_chest.jpg" alt="indiana jones about to open the chest at the end of the Venician catacombs" class = "retro">
     <img src="images/indiana_jones_skeleton.jpg" alt="inside the chest is the skeleton of a knight" class = "retro">
-    <p style="text-align: center;"><em>Cue nightmares</em></p>
+    <p class="caption">Cue nightmares</p>
     <p>Later I got hooked on the original Sid Meier's civilization, which has given me a lifelong love of history. Many a highschool assignment was completed while alt-tabbing to Civilization.<p/>
     <img src="images/civilization.gif" alt="a screen shot of civilization showing the Aztec capital Tenochtitlan being threatened by some barbarians" class="center" class="retro">
-    <p style="text-align: center;"><em>Watch out Aztecs! The barbarian horde is approaching!</em></p>
+    <p class="caption">Watch out Aztecs! The barbarian horde is approaching!</p>
     <p>It was in Civilization 2 that I discovered I could manipulate files to alter certain components of the game. I marvelled at the power of this tweaking, and found it particularly gratifying because it was something I discovered myself, and that my brother didn't know how to do. My school had an uninspiring computer science department and so I drifted more into the sciences and then life got in the way.</p>
     <p>I often day dreamed about a computer-based job where my day was spent brainstorming with colleagues and solving real world problems with computing power. In 2020 I signed up for CS50x and was instantly hooked. I poured hours into a space invaders type Scratch game. I loved learning to code, the methodical and precise language, and the tricks that could unleash powerful programming. Unfortunately with the unsettling events of 2020 and the lack of support that this online course offered, I eventually hit a difficult hurdle that I was not able to surmount.</p>
     <img src="images/rocket_run.png" alt="a screenshot of rocket run, my scratch game">
