css header changes

--- a/ideal_job.html
+++ b/ideal_job.html
@@ -5,7 +5,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+  <header>
     <h3>Ideal Job</h3>
+  </header>
     <a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a>
     <img src="images/ideal_job_1.png" alt="screenshot 1 of my ideal job from advertisement">
     <img src="images/ideal_job_2.png" alt="screenshot 2 of my ideal job from advertisement">
