--- a/references.html
+++ b/references.html
@@ -5,7 +5,9 @@
     <link href="css/style.css" rel"stylesheet">
   </head>
   <body>
-    <h3>References</h3>
-    <p>Return to <a href="index.html">homepage</a></p>
+    <header>
+      <h3>References</h3>
+    </header>
+      <p>Return to <a href="index.html">homepage</a></p>
   </body>
 </html>
