--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <h1>Nicholas Richards</h1>
     <h5>ePortfolio</h5>
-    <p>#: s3923381<br>e: s3923381@student.rmit.edu.au</p>
+    <h5>#: s3923381</h5>
+    <h5>e: s3923381@student.rmit.edu.au</h5>
     <h4><a href="personal_information.html">Personal Information</a></h4>
     <h4><a href="interest_in_it.html">Interest in IT</a></h4>
     <h4><a href="ideal_job.html">Ideal Job</a></h4>
