--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Nicholas Richards</h1>
-    <h5>ePortfolio</h5>
+    <h5><strong>ePortfolio</strong></h5>
     <h5>#: s3923381</h5>
     <h5>e: s3923381@student.rmit.edu.au</h5>
     <h4><a href="personal_information.html">Personal Information</a></h4>
