--- a/references.html
+++ b/references.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>references</title>
-    <link href="css/style.css" rel"stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
