extra content for personal profile + updates to css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Nicholas Richards</h1>
+    <h1>Nicholas<br>Richards</h1>
     <h5><strong>ePortfolio</strong></h5>
     <h6>#: s3923381</h5>
     <h6>e: s3923381@student.rmit.edu.au</h5>
