starting on references page, checking out link performance

--- a/references.html
+++ b/references.html
@@ -8,6 +8,62 @@
     <header>
       <h3>References</h3>
     </header>
+      <p>
+Australian Bureau of Statistics 2018, Causes of Death 2017, ABS cat. no. 3303.0, September.
+
+AEDS, <a href="https://www.aeds.com.au/product/2/2/zoll-aed-3-public-defibrillator">https://www.aeds.com.au/product/2/2/zoll-aed-3-public-defibrillator</a>
+
+Better Health Channel, <a href="https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/cardiopulmonary-resuscitation-cpr">https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/cardiopulmonary-resuscitation-cpr</a>
+
+Drone Code, https://www.dronecode.org/
+
+Drone Enthusiast, https://www.dronethusiast.com/heavy-lift-drones/
+
+Drone Rush, https://dronerush.com/how-fast-can-a-drone-fly-science-of-flight-10953/
+
+Health Direct, https://www.healthdirect.gov.au/how-to-perform-cpr#using-aed
+
+Heart Foundation, https://www.heartfoundation.org.au/conditions/cardiac-arrest
+
+Heart Foundation, https://www.heartfoundation.org.au/conditions/heart-attack
+
+Henriques-Gomez, L 2018, "Transport emissions continue to rise as Australia lags behind other nations", The Guardian, September 13, 2018
+<https://www.theguardian.com/environment/2018/sep/13/transport-emissions-continue-to-rise-as-australia-lags-behind-other-nations>
+
+Infosys, https://www.infosysbpm.com/offerings/functions/digital-business-services/insights/documents/mapping-autonomous-driving-future.pdf
+
+Koetsier, J 2021, "Autonomous Drones Achieve ‘Most Sophisticated Level Of 3D Aerial Autonomy To Date’", Forbes, May 29, 2021
+https://www.forbes.com/sites/johnkoetsier/2021/05/29/autonomous-drones-achieve-most-sophisticated-level-of-3d-aerial-autonomy-to-date/?sh=640f78716531
+
+Mavlink, https://mavlink.io/en/
+
+National Centre for Biotechnology Information, https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4641543/#i1062-6050-50-10-1054-b05
+
+NSW Ambulance, 2018, https://www.ambulance.nsw.gov.au/__data/assets/pdf_file/0009/580338/DE298-NSW-Ambulance-CAR-Report-2018_V5_FINAL.pdf
+
+NSW Ambulance, 2019, https://www.ambulance.nsw.gov.au/__data/assets/pdf_file/0006/643722/DE487-OHCAR-Report-2019_V6.pdf
+
+NSW Health, https://www.health.nsw.gov.au/cardiacarrest
+
+Paramedic Study Guide, https://www.paramedicstudyguide.com.au/cardiac-arrest
+
+PX4, https://px4.io/
+
+Red Bytes, https://www.redbytes.in/skills-become-mobile-app-developer/
+
+Toth, K 2017, "Top 5 Skills Required for a Mobile Application Developer",
+https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth
+
+Vella, M 2016 "Why You Shouldn't Be Allowed To Drive" Time, February 25, 2016
+<https://time.com/4236980/against-human-driving/>
+
+Watts, J 2019, "Concrete: the most destructive material on Earth" The Guardian, February 25, 2019
+<https://www.theguardian.com/cities/2019/feb/25/concrete-the-most-destructive-material-on-earth>
+
+Webber, J  2019, "Driverless cars: once they’re on the road, human drivers should be banned" The Conversation, 6 June, 2019, <https://theconversation.com/driverless-cars-once-theyre-on-the-road-human-drivers-should-be-banned-118293>
+
+Wiley, https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470757437.app3
+</p>
       <p>Return to <a href="index.html">homepage</a></p>
   </body>
 </html>
