Project idea content created Link fixed on index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h4><a href="interest_in_it.html">Interest in IT</a></h4>
     <h4><a href="ideal_job.html">Ideal Job</a></h4>
     <h4><a href="personal_profile.html">Personal Profile</a></h4>
-    <h4><a href="project_idea">Project Idea</a></h4>
+    <h4><a href="project_idea.html">Project Idea</a></h4>
     <h4><a href="references.html">References</a></h4>
   </body>
 </html>
