--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Nicholas<br>Richards</h1>
-    <h5><strong>ePortfolio</strong></h5>
-    <h6>#: s3923381</h5>
-    <h6>e: s3923381@student.rmit.edu.au</h5>
-    <h4><a href="personal_information.html">Personal Information</a></h4>
-    <h4><a href="interest_in_it.html">Interest in IT</a></h4>
-    <h4><a href="ideal_job.html">Ideal Job</a></h4>
-    <h4><a href="personal_profile.html">Personal Profile</a></h4>
-    <h4><a href="project_idea.html">Project Idea</a></h4>
-    <h4><a href="references.html">References</a></h4>
+    <div>
+      <div class="homepage">
+        <h1>Nicholas<br>Richards</h1>
+        <h5><strong>ePortfolio</strong></h5>
+        <h6>#: s3923381</h5>
+        <h6>e: s3923381@student.rmit.edu.au</h5>
+      </div>
+      <div>
+        <h4><a href="personal_information.html">Personal Information</a></h4>
+        <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+        <h4><a href="ideal_job.html">Ideal Job</a></h4>
+        <h4><a href="personal_profile.html">Personal Profile</a></h4>
+        <h4><a href="project_idea.html">Project Idea</a></h4>
+        <h4><a href="references.html">References</a></h4>
+      </div>
+    </div> <!-- homepage -->
   </body>
 </html>
