--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="top_band">
+    </div>
     <div class="homepage">
       <div>
         <h1>Nicholas<br>Richards</h1>
