--- a/project_idea.html
+++ b/project_idea.html
@@ -51,5 +51,13 @@
     <p>This project will show industry, politicians and society of the benefits and feasibility of drone technology, and in artificial intelligence to deliver improvements to human life. I see further extension of this technology to other emergency services. Time is also critical in fire and police emergencies and the ability to swiftly or silently arrive at an incident and conduct some initial actions to avoid escalation can circumvent the incident from progressing into something more serious.</p>
     <p>Beyond this scope I imagine that entrepreneurs could find numerous commercial applications for this technology, the speedy delivery of goods with minimum human labour and greenhouse emissions being the most obvious.</p>
     <p>Return to <a href="index.html">homepage</a></p>
+  <footer>
+    <h4><a href="personal_information.html">Personal Information</a></h4>
+    <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+    <h4><a href="ideal_job.html">Ideal Job</a></h4>
+    <h4><a href="personal_profile.html">Personal Profile</a></h4>
+    <h4><a href="project_idea.html">Project Idea</a></h4>
+    <h4><a href="references.html">References</a></h4>
+  </footer>
   </body>
 </html>
