--- a/references.html
+++ b/references.html
@@ -34,5 +34,13 @@
       <p><a href="https://theconversation.com/driverless-cars-once-theyre-on-the-road-human-drivers-should-be-banned-118293 target="_blank"">Webber, J  2019, "Driverless cars: once they’re on the road, human drivers should be banned" The Conversation, 6 June, 2019</a></p>
       <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470757437.app3 target="_blank"">Wiley</a></p>
       <p>Return to <a href="index.html">homepage</a></p>
+    <footer>
+      <h4><a href="personal_information.html">Personal Information</a></h4>
+      <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+      <h4><a href="ideal_job.html">Ideal Job</a></h4>
+      <h4><a href="personal_profile.html">Personal Profile</a></h4>
+      <h4><a href="project_idea.html">Project Idea</a></h4>
+      <h4><a href="references.html">References</a></h4>
+    </footer>
   </body>
 </html>
