--- a/personal_profile.html
+++ b/personal_profile.html
@@ -27,6 +27,13 @@
       <p>I believe the results of the Myers-Briggs and Big 5 personality tests were highly accurate reflections of my personality, both its advantages and disadvantages. Being cognizant of these will help me to work to my strengths and not be hindered by my shortcomings. </p>
       <p>The various learning style tests I conducted were not particularly insightful as the results varied considerably across the tests. They were useful in informing me of the different learning styles so that I can attempt different methods of learning in the future to try to discern any preference I may have.</p>
       <p>When forming a team I need to ensure there is at least one strong leader, and some extroverted people, to offset my shyness and self doubt. I will work very productively and supportively in a team with positive, enthusiastic people, with clear goals and a direct and efficient approach to taking a project from inception to conclusion. I should avoid forming a team that has negative or critical types, as they will reduce my motivation and paralyse my productivity with over-analysis and self doubt. I should also avoid team members that procrastinate or prefer lengthy discussion over productivity.</p>
-      <p>Return to <a href="index.html">homepage</a></p>
+    <footer>
+      <h4><a href="personal_information.html">Personal Information</a></h4>
+      <h4><a href="interest_in_it.html">Interest in IT</a></h4>
+      <h4><a href="ideal_job.html">Ideal Job</a></h4>
+      <h4><a href="personal_profile.html">Personal Profile</a></h4>
+      <h4><a href="project_idea.html">Project Idea</a></h4>
+      <h4><a href="references.html">References</a></h4>
+    </footer>
   </body>
 </html>
