--- a/ideal_job.html
+++ b/ideal_job.html
@@ -21,12 +21,12 @@
       <p>This first role would expose me to project management at an organisational level, working under experienced project managers, and closely observing their skills and performance. With continued experience I could take on more responsibility in the management of the project, and become a more vocal and pivotal team member in driving a project towards successful delivery. A more senior data analysis role, perhaps at a different organisation for breadth of experience, and involving supervision of junior analysts would further build on the skills required, especially if I volunteered to be responsible for meeting planning, project direction and stakeholder presentations. After some time in a role such as this I would be competent and confident to apply for my ideal job.</p>
       <p>Return to <a href="index.html">homepage</a></p>
     <footer>
-      <h4><a href="personal_information.html">Personal Information</a></h4>
-      <h4><a href="interest_in_it.html">Interest in IT</a></h4>
-      <h4><a href="ideal_job.html">Ideal Job</a></h4>
-      <h4><a href="personal_profile.html">Personal Profile</a></h4>
-      <h4><a href="project_idea.html">Project Idea</a></h4>
-      <h4><a href="references.html">References</a></h4>
+      <p><a href="personal_information.html">Personal Information</a></p>
+      <p><a href="interest_in_it.html">Interest in IT</a></p>
+      <p><a href="ideal_job.html">Ideal Job</a></p>
+      <p><a href="personal_profile.html">Personal Profile</a></p>
+      <p><a href="project_idea.html">Project Idea</a></p>
+      <p><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
