--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -21,14 +21,14 @@
       <p>I have chosen to study at RMIT because I believe with the excellent academic and peer support, this time around I will be able to progress further. A qualification from a respected institution like RMIT, whether it be an Undergraduate Certificate or even a Bachelor Degree, will give me a solid foundation as an IT professional. The job-ready focus of RMITs courses, as well as its links to industry, give me confidence that this is the right first step in a fulfilling career change.</p>
       <p>My early affinity with programming indicates I could look forward to a future in this area of the IT industry. I also have a passion for self-driving cars, as I believe humans are not well qualified to be behind the wheel of a fast moving vehicle, and there are many more useful activities a human could be doing while moving around the planet. I would be interested in studying cyber security as well. I value integrity and ethics and would like to contribute to making the online world a safe and secure place for all people.</p>
       <p>I am excited to learn the basics of programming, and the building blocks to make me a self-directed learner in this area, able to learn new languages as required. I am also looking forward to exploring the vast universe of IT, understanding all its different applications, and the many fields of employment available. I already love the passion that IT people share for progress, innovation and problem solving.</p>
-      <p>Return to <a href="index.html">homepage</a></p>
     <footer>
-      <h4><a href="personal_information.html">Personal Information</a></h4>
-      <h4><a href="interest_in_it.html">Interest in IT</a></h4>
-      <h4><a href="ideal_job.html">Ideal Job</a></h4>
-      <h4><a href="personal_profile.html">Personal Profile</a></h4>
-      <h4><a href="project_idea.html">Project Idea</a></h4>
-      <h4><a href="references.html">References</a></h4>
+      <p><a href="index.html">Home</a></p>
+      <p><a href="personal_information.html">Personal Information</a></p>
+      <p><a href="interest_in_it.html">Interest in IT</a></p>
+      <p><a href="ideal_job.html">Ideal Job</a></p>
+      <p><a href="personal_profile.html">Personal Profile</a></p>
+      <p><a href="project_idea.html">Project Idea</a></p>
+      <p><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
