--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -22,13 +22,13 @@
       <p>My early affinity with programming indicates I could look forward to a future in this area of the IT industry. I also have a passion for self-driving cars, as I believe humans are not well qualified to be behind the wheel of a fast moving vehicle, and there are many more useful activities a human could be doing while moving around the planet. I would be interested in studying cyber security as well. I value integrity and ethics and would like to contribute to making the online world a safe and secure place for all people.</p>
       <p>I am excited to learn the basics of programming, and the building blocks to make me a self-directed learner in this area, able to learn new languages as required. I am also looking forward to exploring the vast universe of IT, understanding all its different applications, and the many fields of employment available. I already love the passion that IT people share for progress, innovation and problem solving.</p>
     <footer>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="personal_information.html">Personal Information</a></p>
-      <p><a href="interest_in_it.html">Interest in IT</a></p>
-      <p><a href="ideal_job.html">Ideal Job</a></p>
-      <p><a href="personal_profile.html">Personal Profile</a></p>
-      <p><a href="project_idea.html">Project Idea</a></p>
-      <p><a href="references.html">References</a></p>
+      <p class="nav"><a href="index.html">Home</a></p>
+      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      <p class="nav"><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
