--- a/references.html
+++ b/references.html
@@ -34,13 +34,13 @@
       <p><a href="https://theconversation.com/driverless-cars-once-theyre-on-the-road-human-drivers-should-be-banned-118293 target="_blank"">Webber, J  2019, "Driverless cars: once they’re on the road, human drivers should be banned" The Conversation, 6 June, 2019</a></p>
       <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470757437.app3 target="_blank"">Wiley</a></p>
     <footer>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="personal_information.html">Personal Information</a></p>
-      <p><a href="interest_in_it.html">Interest in IT</a></p>
-      <p><a href="ideal_job.html">Ideal Job</a></p>
-      <p><a href="personal_profile.html">Personal Profile</a></p>
-      <p><a href="project_idea.html">Project Idea</a></p>
-      <p><a href="references.html">References</a></p>
+      <p class="nav"><a href="index.html">Home</a></p>
+      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      <p class="nav"><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
