--- a/ideal_job.html
+++ b/ideal_job.html
@@ -20,13 +20,13 @@
       <p>With training in the IT skills required for data analysis I could find an entry level data analysis role that worked on multiple data sets as part of a team. I plan to complete the Bachelor of IT through RMIT, and could supplement this with self-study or employment training in order to land this first job in data analytics. </p>
       <p>This first role would expose me to project management at an organisational level, working under experienced project managers, and closely observing their skills and performance. With continued experience I could take on more responsibility in the management of the project, and become a more vocal and pivotal team member in driving a project towards successful delivery. A more senior data analysis role, perhaps at a different organisation for breadth of experience, and involving supervision of junior analysts would further build on the skills required, especially if I volunteered to be responsible for meeting planning, project direction and stakeholder presentations. After some time in a role such as this I would be competent and confident to apply for my ideal job.</p>
     <footer>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="personal_information.html">Personal Information</a></p>
-      <p><a href="interest_in_it.html">Interest in IT</a></p>
-      <p><a href="ideal_job.html">Ideal Job</a></p>
-      <p><a href="personal_profile.html">Personal Profile</a></p>
-      <p><a href="project_idea.html">Project Idea</a></p>
-      <p><a href="references.html">References</a></p>
+      <p class="nav"><a href="index.html">Home</a></p>
+      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      <p class="nav"><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
