--- a/personal_information.html
+++ b/personal_information.html
@@ -13,13 +13,13 @@
       <p>I think everyone found 2020 to be a strange and challenging year. For me it was always going to be life changing, even before the historic events unfolded. My eldest child turned 10, my youngest child started primary school and my partner returned to full time work. I was excited at the possibilities this year was to create, and had a long list of hobbies, projects and ideas to throw myself into. I enrolled in an online Introduction to Computer Science course, and was instantly hooked. To be learning again after 15 years was refreshing, especially something as powerful and modern as computer programming. I felt a rush of excitement when I understood a piece of coding and was able to solve a problem. But four weeks in, the first lockdown hit, and I was thrown into homeschooling three primary school children, including a kindergarten child in term 1! What followed was an exhausting and brain-breaking few months, and by the end my energy and drive for the year was depleted.</p>
       <p>I am enthusiastic about all things Italian - the food, the culture, the landscape, the history. I studied a little of the language when I was a teenager and it came quite naturally. A few years ago I picked it up again, in the hope that I might escape there for six months when I turn 40. I was getting pretty good, utilising a couple of language apps, and then the pandemic hit. It's pretty hard to stay motivated when there is no prospect of international travel on the horizon. I think I will be past 40 by the time I am next on an aeroplane. So this year I am turning my language-learning towards something a little more universal, and a little more lockdown-friendly. I am learning two languages - Python and HTML!</p>
     <footer>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="personal_information.html">Personal Information</a></p>
-      <p><a href="interest_in_it.html">Interest in IT</a></p>
-      <p><a href="ideal_job.html">Ideal Job</a></p>
-      <p><a href="personal_profile.html">Personal Profile</a></p>
-      <p><a href="project_idea.html">Project Idea</a></p>
-      <p><a href="references.html">References</a></p>
+      <p class="nav"><a href="index.html">Home</a></p>
+      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      <p class="nav"><a href="references.html">References</a></p>
     </footer>
   </body>
 </html>
