added main to pages

--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -8,6 +8,7 @@
     <header>
       <h3>Interest in IT</h3>
     </header>
+    <main>
       <p>My interest in IT started with the first computer my father brought home in the 1990s. Firstly, it was the biggest cardboard box I had ever seen, and immediately became the most awesome robot costume. But long after the cardboard box had gone I would look over my brother's shoulder as he played classic games like Where In the World is Carmen Sandiego? and Indiana Jones and the Last Crusade. A scene from Indy in the catacombs of Venice gave me nightmares for years!</p>
       <img src="images/indiana_jones_chest.jpg" alt="indiana jones about to open the chest at the end of the Venician catacombs">
       <img src="images/indiana_jones_skeleton.jpg" alt="inside the chest is the skeleton of a knight">
@@ -21,6 +22,7 @@
       <p>I have chosen to study at RMIT because I believe with the excellent academic and peer support, this time around I will be able to progress further. A qualification from a respected institution like RMIT, whether it be an Undergraduate Certificate or even a Bachelor Degree, will give me a solid foundation as an IT professional. The job-ready focus of RMITs courses, as well as its links to industry, give me confidence that this is the right first step in a fulfilling career change.</p>
       <p>My early affinity with programming indicates I could look forward to a future in this area of the IT industry. I also have a passion for self-driving cars, as I believe humans are not well qualified to be behind the wheel of a fast moving vehicle, and there are many more useful activities a human could be doing while moving around the planet. I would be interested in studying cyber security as well. I value integrity and ethics and would like to contribute to making the online world a safe and secure place for all people.</p>
       <p>I am excited to learn the basics of programming, and the building blocks to make me a self-directed learner in this area, able to learn new languages as required. I am also looking forward to exploring the vast universe of IT, understanding all its different applications, and the many fields of employment available. I already love the passion that IT people share for progress, innovation and problem solving.</p>
+    </main>
     <footer>
       <p class="nav"><a href="index.html">Home</a></p>
       <p class="nav"><a href="personal_information.html">Personal Information</a></p>
