--- a/project_idea.html
+++ b/project_idea.html
@@ -8,6 +8,7 @@
     <header>
       <h3>Project Idea</h3>
     </header>
+    <main>
       <h2>Overview</h2>
       <p>I envisage a future where networked drones control the airspace just out of earshot, making our lives effortlessly more efficient and easier, and saving our Earth from the deleterious effects of our century-long addiction to road travel and transport.</p>
       <p>But all visions need a first step, a crack that opens the door to generational change and progress. Humans will always consider an option that saves human lives. This pandemic has shown us that in the face of fear, humans will tolerate almost any change. I propose that the first step be Resuscitation Drones, capable of responding to distress calls for humans requiring resuscitation much faster than currently possible, and providing earlier and better care in the first critical minutes of a life-threatening emergency. </p>
@@ -50,6 +51,7 @@
       <p>If this project is successful there will be significantly improved outcomes for sufferers of sudden cardiac arrest, a medical emergency with a high mortality rate that can affect anyone, any time. I believe people would feel safer knowing they are protected by this technology. Paramedics will arrive on scene to a life that is being preserved and is savable, instead of the current situation where too much time has passed when the ambulance arrives and outcomes are poor.</p>
       <p>This project will show industry, politicians and society of the benefits and feasibility of drone technology, and in artificial intelligence to deliver improvements to human life. I see further extension of this technology to other emergency services. Time is also critical in fire and police emergencies and the ability to swiftly or silently arrive at an incident and conduct some initial actions to avoid escalation can circumvent the incident from progressing into something more serious.</p>
       <p>Beyond this scope I imagine that entrepreneurs could find numerous commercial applications for this technology, the speedy delivery of goods with minimum human labour and greenhouse emissions being the most obvious.</p>
+    </main>
     <footer>
       <p class="nav"><a href="index.html">Home</a></p>
       <p class="nav"><a href="personal_information.html">Personal Information</a></p>
