--- a/references.html
+++ b/references.html
@@ -8,6 +8,7 @@
     <header>
       <h3>References</h3>
     </header>
+    <main>
       <p>Australian Bureau of Statistics 2018, Causes of Death 2017, ABS cat. no. 3303.0, September.</p>
       <p><a href="https://www.aeds.com.au/product/2/2/zoll-aed-3-public-defibrillator" target="_blank">AEDS</a></p>
       <p><a href="https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/cardiopulmonary-resuscitation-cpr target="_blank"">Better Health Channel</a></P>
@@ -33,6 +34,7 @@
       <p><a href="https://www.theguardian.com/cities/2019/feb/25/concrete-the-most-destructive-material-on-earth target="_blank"">Watts, J 2019, "Concrete: the most destructive material on Earth" The Guardian, February 25, 2019</a></p>
       <p><a href="https://theconversation.com/driverless-cars-once-theyre-on-the-road-human-drivers-should-be-banned-118293 target="_blank"">Webber, J  2019, "Driverless cars: once they’re on the road, human drivers should be banned" The Conversation, 6 June, 2019</a></p>
       <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470757437.app3 target="_blank"">Wiley</a></p>
+    </main>
     <footer>
       <p class="nav"><a href="index.html">Home</a></p>
       <p class="nav"><a href="personal_information.html">Personal Information</a></p>
