--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -24,12 +24,14 @@
       <p>I am excited to learn the basics of programming, and the building blocks to make me a self-directed learner in this area, able to learn new languages as required. I am also looking forward to exploring the vast universe of IT, understanding all its different applications, and the many fields of employment available. I already love the passion that IT people share for progress, innovation and problem solving.</p>
     </main>
     <footer>
-      <p class="nav"><a href="index.html">Home</a></p>
-      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
-      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
-      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
-      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
-      <p class="nav"><a href="references.html">References</a></p>
+      <div class="menu">
+        <p class="nav"><a href="index.html">Home</a></p>
+        <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+        <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+        <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+        <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+        <p class="nav"><a href="references.html">References</a></p>
+      </div>
     </footer>
   </body>
 </html>
