--- a/project_idea.html
+++ b/project_idea.html
@@ -53,12 +53,14 @@
       <p>Beyond this scope I imagine that entrepreneurs could find numerous commercial applications for this technology, the speedy delivery of goods with minimum human labour and greenhouse emissions being the most obvious.</p>
     </main>
     <footer>
-      <p class="nav"><a href="index.html">Home</a></p>
-      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
-      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
-      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
-      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
-      <p class="nav"><a href="references.html">References</a></p>
+      <div class="menu">
+        <p class="nav"><a href="index.html">Home</a></p>
+        <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+        <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+        <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+        <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+        <p class="nav"><a href="references.html">References</a></p>
+      </div>
     </footer>
   </body>
 </html>
