--- a/references.html
+++ b/references.html
@@ -36,12 +36,14 @@
       <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470757437.app3 target="_blank"">Wiley</a></p>
     </main>
     <footer>
-      <p class="nav"><a href="index.html">Home</a></p>
-      <p class="nav"><a href="personal_information.html">Personal Information</a></p>
-      <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
-      <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
-      <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
-      <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      <div class="menu">
+        <p class="nav"><a href="index.html">Home</a></p>
+        <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+        <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+        <p class="nav"><a href="ideal_job.html">Ideal Job</a></p>
+        <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+        <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+      </div>
     </footer>
   </body>
 </html>
