--- a/personal_information.html
+++ b/personal_information.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h3>Personal Information</h3>
+      <h3>Personal<br>Information</h3>
     </header>
     <main>
       <p>I am Sydney born and raised, but ten years ago, when I had young children, I decided to move out of the city for the space and fresh air promised by the beautiful Southern Highlands, two hours south-west of Sydney. </p>
