--- a/personal_profile.html
+++ b/personal_profile.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h3>Personal Profile</h3>
+      <h3>Personal<br>Profile</h3>
     </header>
     <main>
       <img src="images/personality_head.png" alt="my personality logo">
