--- a/project_idea.html
+++ b/project_idea.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h3>Project Idea</h3>
+      <h3>Project<br>Idea</h3>
     </header>
     <main>
       <h2>Overview</h2>
