--- a/ideal_job.html
+++ b/ideal_job.html
@@ -7,6 +7,8 @@
   <body>
     <header>
       <h3>Ideal<br>Job</h3>
+      <div class="header_line">
+      </div>
     </header>
     <main>
       <a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a>
