--- a/ideal_job.html
+++ b/ideal_job.html
@@ -25,10 +25,20 @@
       <div class="menu">
         <div class="nav">
           <p><a href="index.html">Home</a></p>
+        </div>
+        <div class="nav">
           <p><a href="personal_information.html">Personal Information</a></p>
+        </div>
+        <div class="nav">
           <p><a href="interest_in_it.html">Interest in IT</a></p>
+        </div>
+        <div class="nav">
           <p><a href="personal_profile.html">Personal Profile</a></p>
+        </div>
+        <div class="nav">
           <p><a href="project_idea.html">Project Idea</a></p>
+        </div>
+        <div class="nav">
           <p><a href="references.html">References</a></p>
         </div>
      </div>
