--- a/ideal_job.html
+++ b/ideal_job.html
@@ -23,24 +23,12 @@
     </main>
     <footer>
       <div class="menu">
-        <div class="nav">
-          <p><a href="index.html">Home</a></p>
-        </div>
-        <div class="nav">
-          <p><a href="personal_information.html">Personal Information</a></p>
-        </div>
-        <div class="nav">
-          <p><a href="interest_in_it.html">Interest in IT</a></p>
-        </div>
-        <div class="nav">
-          <p><a href="personal_profile.html">Personal Profile</a></p>
-        </div>
-        <div class="nav">
-          <p><a href="project_idea.html">Project Idea</a></p>
-        </div>
-        <div class="nav">
-          <p><a href="references.html">References</a></p>
-        </div>
+          <p class="nav"><a href="index.html">Home</a></p>
+          <p class="nav"><a href="personal_information.html">Personal Information</a></p>
+          <p class="nav"><a href="interest_in_it.html">Interest in IT</a></p>
+          <p class="nav"><a href="personal_profile.html">Personal Profile</a></p>
+          <p class="nav"><a href="project_idea.html">Project Idea</a></p>
+          <p class="nav"><a href="references.html">References</a></p>
      </div>
     </footer>
   </body>
