--- a/interest_in_it.html
+++ b/interest_in_it.html
@@ -10,8 +10,10 @@
     </header>
     <main>
       <p>My interest in IT started with the first computer my father brought home in the 1990s. Firstly, it was the biggest cardboard box I had ever seen, and immediately became the most awesome robot costume. But long after the cardboard box had gone I would look over my brother's shoulder as he played classic games like Where In the World is Carmen Sandiego? and Indiana Jones and the Last Crusade. A scene from Indy in the catacombs of Venice gave me nightmares for years!</p>
-      <img src="images/indiana_jones_chest.jpg" alt="indiana jones about to open the chest at the end of the Venician catacombs">
-      <img src="images/indiana_jones_skeleton.jpg" alt="inside the chest is the skeleton of a knight">
+      <div class="2_images">
+        <img src="images/indiana_jones_chest.jpg" alt="indiana jones about to open the chest at the end of the Venician catacombs">
+        <img src="images/indiana_jones_skeleton.jpg" alt="inside the chest is the skeleton of a knight">
+      </div>
       <p class="caption">Cue nightmares</p>
       <p>Later I got hooked on the original Sid Meier's civilization, which has given me a lifelong love of history. Many a highschool assignment was completed while alt-tabbing to Civilization when my parents walked in.<p/>
       <img src="images/civilization.gif" alt="a screen shot of civilization showing the Aztec capital Tenochtitlan being threatened by some barbarians" class="center">
