ideal jof page formatting

--- a/ideal_job.html
+++ b/ideal_job.html
@@ -9,10 +9,12 @@
       <h3>Ideal<br>Job</h3>
     </header>
     <main>
-      <a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a>
-      <img src="images/ideal_job_1.png" alt="screenshot 1 of my ideal job from advertisement">
-      <img src="images/ideal_job_2.png" alt="screenshot 2 of my ideal job from advertisement">
-      <img src="images/ideal_job_3.png" alt="screenshot 3 of my ideal job from advertisement">
+      <p><a href="https://www.seek.com.au/job/53537638?type=standout#searchRequestToken=4527c51c-1e42-48df-b394-9057499ed98d">Job advertisement on seek.com.au (Now expired)</a></p>
+      <div class="ideal_job_images">
+        <img src="images/ideal_job_1.png" alt="screenshot 1 of my ideal job from advertisement">
+        <img src="images/ideal_job_2.png" alt="screenshot 2 of my ideal job from advertisement">
+        <img src="images/ideal_job_3.png" alt="screenshot 3 of my ideal job from advertisement">
+      </div>
       <p>I think this is my ideal job for numerous reasons. I am passionate about mental health awareness and increasing support for mental health services. Many of my family and friends have experienced periods of mental ill health during their lifetimes, including the time of great change and challenge surrounding the birth of a child.</p>
       <p>Many data analysis jobs are focused on improving revenue for business. I am not a money-focused person and would be more fulfilled knowing my skills are being used to improve the reach and efficiency of a not-for-profit mental health organisation. The hope would be that my IT skills would improve the experience of program users, expand the reach of the program so that more people can access it, and thereby improve the mental health of a vulnerable and often ignored section of the population.</p>
       <p>The role will involve collating volumes of data from various sources and creating powerful statistics and meaningful narratives from the data, in order to compellingly present to a variety of audiences on user experiences and the successes of the programs.</p>
