personal profile changes

--- a/personal_profile.html
+++ b/personal_profile.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <header>
-      <h3>Personal<br>Profile</h3>
+      <div class="personal_profile_header">
+        <h3>Personal<br>Profile</h3>
+        <img src="images/personality_head.png" alt="my personality logo">
+      </div>
     </header>
     <main>
-      <img src="images/personality_head.png" alt="my personality logo">
       <img src="images/personality_summary.png" alt="my personality summary showing that I am a turbulent architect code INTJ-T ">
       <img src="images/personality_details.png" alt="details of my myer briggs personality test 94% introverted, 66% intuitive, 59% thinking, 65% judging, 74% turbulent">
       <p>My Myers-Briggs test gave me the result of a turbulent architect. When I read through this profile I felt that it fitted me perfectly, and it made me feel quite validated. It is a rare personality type that struggles to fit in and is capable yet full of self-doubt. I feel like this is an excellent description of me. </p>
